# domek_2

./: Cargo.toml  README.md  build.rs
assets/bathroom/: 500.353.00.1_P.glb  Furo-KDJ-Stabilizacja-krzyzowa.glb  muszla.glb  pralka.glb  umywalka_geberit_500.249.00.2.glb
assets/kitchen/: Marcus_30_lamp.glb  Marcus_40_lamp.glb  Marcus_50_lamp.glb  Marcus_60_lamp.glb  kitchen_sink.glb  table.glb
assets/stl/: bathroom_cabinet.scad  bathroom_cabinet.stl  bathroom_suspended_ceiling.scad  bathroom_suspended_ceiling.stl  bedroom_cabbinet.scad  bedroom_cabinet.scad  bedroom_cabinet.stl  bedroom_wall.scad  bedroom_wall.stl  hall_cabinet.scad  hall_cabinet.stl  kitchen_handle.scad  kitchen_handle.stl  office_cabinet.scad  office_cabinet.stl  office_wall.scad  office_wall.stl  patio_wall.scad  patio_wall.stl  patio_wall_valance.scad  patio_wall_valance.stl  sofa.scad  sofa.stl  szafa_przedpokoj.scad  szafa_przedpokoj.stl  table.scad  table.stl  upholstery_table.scad  upholstery_table.stl  washing_machine_cabinet.scad  washing_machine_cabinet.stl
src/: bathroom.rs  common.rs  control.rs  floor.rs  kitchen.rs  look.rs  main.rs  movement.rs
