cargo-features = ["codegen-backend"]

[toolchain]
channel = "nightly"

[package]
name = "jutrzenka"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[unstable]
codegen-backend = true

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
codegen-backend = "llvm"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = [
    "-C",
    "link-arg=-fuse-ld=/usr/bin/mold", # mold
    "-Zshare-generics=y", # (Nightly) Make the current crate share its generic instantiations
    "-Zcodegen-backend=cranelift",
]

[dependencies]
# Disabling bevy/dynamic_linking may improve Mold's performance.
bevy = { version = "0.16.1", features = ["dynamic_linking", "jpeg", "wayland", "bevy_dev_tools", "experimental_pbr_pcss"] }
#bevy = { version = "0.16.0", features = ["jpeg"] } # windows cargo build --target=x86_64-pc-windows-gnu --release
bevy_basic_portals = "0.8"
bevy_stl = "0.16.0"
